[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["MohanadGad38 <90938419+MohanadGad38@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
