[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["MohanadGad38 <90938419+MohanadGad38@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pytest = "^8.2.1"
aiosqlite ="^0.20.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
addopts = "--asyncio-mode=strict"